V2: Adding new sprites, archers, enemies, roguelike buffs, audio, expanding the map, bug fixes